[project]
name = "venice-api"
description = "A custom node implementation for ComfyUI that integrates with venice.ai's Flux and SDXL image generation models. This project is adapted from [a/ComfyUI-FLUX-TOGETHER-API](https://github.com/BZcreativ/ComfyUI-FLUX-TOGETHER-API) to work with the venice.ai API."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["requests>=2.31.0", "Pillow>=10.0.0", "numpy>=1.24.0", "configparser>=5.3.0", "tenacity >=9.0.0"]

[project.urls]
Repository = "https://github.com/DraconicDragon/ComfyUI-Venice-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Venice-API"
Icon = ""
